[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxta"
version = "0.0.2"
description = "ComfyUI nodes to create and integrate with Voxta"
authors = [
  {name = "Team Voxta", email = "info@voxta.ai"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13.0"
classifiers = []
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.13.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/voxta-ai/voxta"
BugTracker = "https://github.com/voxta-ai/voxta/issues"
Documentation = "https://github.com/voxta-ai/voxta/wiki"


[tool.comfy]
PublisherId = "voxta"
DisplayName = "Voxta ComfyUI Nodes"
Icon = "https://www.voxta.ai/images/favicon_hu_c1ebff313d71a37c.png"
Tags = ["voxta"]
Repository = "https://github.com/voxta-ai/voxta"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
